<resources>
    <string name="app_name">TheNanny</string>
    <string name="name">First Name</string>
    <string name="lastname">Last Name</string>

    <string name="required">required</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="start_date">Start work year</string>
    <string name="agerange">Age range</string>
    <string name="hourly_wage">Hourly Wage</string>
    <string name="address">Address</string>
    <string name="num_of_children">Number of children</string>
    <string name="age_range">Age range</string>

    <string name="city">City</string>
    <string name="street">רחוב</string>
    <string name="building">מספר</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_sign_up_as">Or Sign Up As</string>
    <string name="parent">Parent</string>
    <string name="babysitter">Babysitter</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="please_enter_the_email_you_use_to_sign_in">Please enter the email you use to sign in</string>
    <string name="reset_password">Reset Password</string>
    <string name="children_age_range">Children Age range:</string>
    <string name="upload_id_file_to_verify_your_identity">Upload ID file to verify your identity</string>
    <string name="chose_file">chose file</string>
    <string name="profile_photo">Profile Photo</string>

</resources>