<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn"
    tools:viewBindingIgnore="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="?actionBarSize"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/signInLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_in"
            android:textColor="#927E96"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/email"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textColorHint="#8D7A91"
            android:textSize="17sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textColorHint="#8D7A91"
            android:textSize="17sp" />

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lilac"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/sign_in"
            android:textColor="#fff" />

        <Button
            android:id="@+id/forgotPassBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/forgot_password"
            android:textSize="15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="20dp"
            android:text="@string/or_sign_up_as"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/signUpParentBtn"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/login_bgnd"
                android:text="@string/parent"
                android:textColor="#fff" />
            <Button
                android:id="@+id/signUpBabysitterBtn"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/login_bgnd"
                android:text="@string/babysitter"
                android:textColor="#fff" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>