<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NannyRegistration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lavender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Nanny Registration Form"
            app:titleTextColor="@color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/form_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstNameInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/name"
                    app:helperText="@string/required"
                    app:helperTextTextColor="@color/required"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/form_info">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstNameField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_border"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastNameInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/lastname"
                    app:helperText="@string/required"
                    app:helperTextTextColor="@color/required"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/firstNameInputLayout">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastNameField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_border"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/email"
                    app:helperText="@string/required"
                    app:helperTextTextColor="@color/required"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lastNameInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_border"
                        android:ems="10"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/phone"
                    app:helperText="@string/required"
                    app:helperTextTextColor="@color/required"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_border"
                        android:ems="10"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/birthDateInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/date_of_birth"
                    app:helperText="@string/required"
                    app:helperTextTextColor="@color/required"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phoneInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birthDateField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_border"
                        android:ems="10"
                        android:inputType="date" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/StartWorkYearInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/start_date"
                    app:helperText="@string/required"
                    app:layout_constraintTop_toBottomOf="@id/birthDateInputLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:helperTextTextColor="@color/required">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/StartWorkYearField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_border"
                        android:ems="10"
                        android:inputType="number"
                        android:textColorHint="#1976D2" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/password"
                    app:helperText="@string/required"
                    app:helperTextTextColor="@color/required"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/StartWorkYearInputLayout"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/lilac">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_border"
                        android:ems="10"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/repeatPasswordInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/repeat_password"
                    app:helperText="@string/required"
                    app:helperTextTextColor="@color/required"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/lilac">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/repeatPasswordField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_border"
                        android:ems="10"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/nextButton"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/lilac"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/next"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/repeatPasswordInputLayout" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
